Solve Overflow of Courses Section Issue

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -181,7 +181,8 @@ a{
 }
 
 .courses-box{
-    height: 120vh;
+    height: 150vh;
+    overflow:auto;
     position: relative;
     border: 2px solid rgb(226, 226, 226);
     margin-top: 10px;
